home/infrastructure-as-code/terraform/aws/task-002-defaultVPC-sbnt-sg-kp-ec2/25-security-group.tf
// Once we have our networking setup ready, we need to create an EC2 instance in which we can SSH using port 22.
// For this, we first need to create a security group which can be attached to our EC2 instance while creation.

resource "aws_security_group" "sg_22" {
  name = "sg_22"
  vpc_id = aws_default_vpc.default.id
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"

    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Environment = var.environment_tag
  }
}
